@@ -7,52 +7,44 @@ import com.wexinc.purchase.api.resource.ExchangeRateResource;
 import com.wexinc.purchase.api.shared.constant.Constantes;
 import com.wexinc.purchase.api.shared.constant.Country;
 import java.math.BigDecimal;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Stream;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mapstruct.factory.Mappers;
 
 class ExchangeRateInfrastructureMapperImplTest {
 
-  private final ExchangeRateInfrastructureMapper MAPPER =
+  private static final ExchangeRateInfrastructureMapper MAPPER =
       Mappers.getMapper(ExchangeRateInfrastructureMapper.class);
 
-  @Test
-  void shouldNotMap() {
-    Assertions.assertNull(
-        this.MAPPER.fromResourceToDTO(null), Constantes.SHOULD_HAVE_RETURNED_NULL);
-  }
-
-  @Test
-  void shouldNotMapData() {
+  @ParameterizedTest
+  @MethodSource("generateArgumentsForTestShouldApply")
+  void testShouldApply(final ExchangeRateDTO expected, final ExchangeRateResource resource) {
     Assertions.assertEquals(
-        new ExchangeRateDTO(null),
-        this.MAPPER.fromResourceToDTO(new ExchangeRateResource(null)),
+        expected,
+        ExchangeRateInfrastructureMapperImplTest.MAPPER.apply(resource),
         Constantes.EXPECTED_THE_SAME_RESULT);
   }
 
-  @Test
-  void shouldNotMapDataItem() {
-    Assertions.assertEquals(
-        new ExchangeRateDTO(Arrays.asList((ExchangeRateDataDTO) null)),
-        this.MAPPER.fromResourceToDTO(
-            new ExchangeRateResource(Arrays.asList((ExchangeRateDataResource) null))),
-        Constantes.EXPECTED_THE_SAME_RESULT);
-  }
-
-  @Test
-  void shouldMap() {
-    Assertions.assertEquals(
-        new ExchangeRateDTO(
-            List.of(
-                new ExchangeRateDataDTO(
-                    Country.BRAZIL.name(), BigDecimal.ZERO, Constantes.FIXED_LOCAL_DATE))),
-        this.MAPPER.fromResourceToDTO(
+  private static Stream<Arguments> generateArgumentsForTestShouldApply() {
+    return Stream.of(
+        Arguments.of(new ExchangeRateDTO(null), new ExchangeRateResource(null)),
+        Arguments.of(
+            new ExchangeRateDTO(Collections.singletonList(null)),
+            new ExchangeRateResource(Collections.singletonList(null))),
+        Arguments.of(
+            new ExchangeRateDTO(
+                List.of(
+                    new ExchangeRateDataDTO(
+                        Country.BRAZIL.name(), BigDecimal.ZERO, Constantes.FIXED_LOCAL_DATE))),
             new ExchangeRateResource(
                 List.of(
                     new ExchangeRateDataResource(
                         Country.BRAZIL.name(), BigDecimal.ZERO, Constantes.FIXED_LOCAL_DATE)))),
-        Constantes.EXPECTED_THE_SAME_RESULT);
+        Arguments.of(null, null));
   }
 }
